# logpy

./: LICENSE  README.md  pyproject.toml
src/pezhmankasraee/logpy/: __init__.py  log.py
