[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logpy"
version = "0.1.0"
authors = [
  { name="Pezhman Kasraee", email="pezhmankasraee@gmail.com" },
]
description = "A project for logging in Python"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }

[project.urls]
"Homepage" = "https://github.com/pezhmankasraee/logpy"